# it-goats

./: .dockerignore  .env.example  .gitignore  .tool-versions  Dockerfile.release  Dockerfile.web  README.md  docker-compose.yaml  package-lock.json  package.json  setup.sh
bode/: .gitignore  Dockerfile  notify.sh  pyproject.toml
bode/.hooks/: pre-commit.json
bode/bode/: app.py  config.py  extensions.py
bode/bode/mail_service/: sending.py
bode/bode/models/: enums.py  tag.py  task.py  task_actions.py  task_relation.py  task_relations_actions.py  task_tag.py  utc_datetime.py  utils.py
bode/bode/models/notifications_data/: model.py
bode/bode/models/recurring_task/: model.py
bode/bode/models/tag/: actions.py  model.py
bode/bode/models/task/: actions.py  model.py
bode/bode/models/task_relation/: actions.py  model.py
bode/bode/resources/: base_schema.py  directed_relation_type.py
bode/bode/resources/settings/: api.py  schemas.py
bode/bode/utils/: graph.py
bode/migrations/: env.py
bode/migrations/versions/: 2a4d3f982d82_add_rrule_field_to_task_model.py  2c16056415f6_add_unique_contraint_in_tags.py  4a5040ab3b05_add_notification_time_to_task_model.py  4bf1c662e32d_add_notifications_data_model.py  4c05d8b56a2d_use_task_status.py  4daafbe3fd77_add_task_model.py  5325b3a47498_.py  5c592f0ac54b_use_task_status.py  67993210b2c4_add_recurring_tasks.py  903de4e9cee5_add_column_is_done_to_model.py  9b8806b556b8_add_due_date_and_description_to_task_.py  a1d5f4b5886f_add_tags.py  bf275b0792b8_add_task_relations_model.py  d71419c8a49a_add_tags.py
(+96 files in other folders)
